--- a/config/locales/models.yml
+++ b/config/locales/models.yml
@@ -1,7 +1,8 @@
 pt-BR:
   activerecord:
     models:
-      warehouse: Galpão
+      warehouse: 'Galpão'
+      supplier: 'Fornecedor'
     attributes:
       warehouse:
         name: "Nome"
@@ -11,4 +12,12 @@ pt-BR:
         cep:  "CEP"
         area: "Área"
         description: "Descrição"
-      # will translate User attribute "login" as "Handle"
+      supplier:
+        corporate_name: 'Razão Social'
+        brand_name: 'Nome Fantasia'
+        registration_number: 'CNPJ'
+        full_address: 'Endereço'
+        city: 'Cidade'
+        state: 'Estado'
+        email: 'E-mail'
+
